added readme link, debugged angular code to refresh state automatically

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <!-- src takes an expression (String, Function, etc.) can be useful for dynamic templating -->
   <!-- <ng-include src="'templates/navbar.html'"></ng-include> -->
   
-  <h1>My TODOs!</h1>
+  <h1>Andrew's MEAN-stack ToDo App</h1>
   
 
   <div class="list" ng-controller="mainCtrl">
